--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X/Y's Mutebots help page.</title>
+  <title>blank</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main class="layout">
     <!-- Left text only -->
-    <aside class="left-panel">
+    <aside class="left-text">
       <h1>blank</h1>
       <p>blank</p>
-      <ul class="bullets">
+      <ul>
         <li>blank</li>
         <li>blank</li>
         <li>blank</li>
