--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <main class="layout">
     <!-- Left text only -->
     <aside class="left-text">
-      <h1>blank</h1>
-      <p>blank</p>
+      <h1>x/y muterbot help</h1>
+      <p>Prefix: mb. or mb@</p>
       <ul>
-        <li>blank</li>
-        <li>blank</li>
-        <li>blank</li>
+        <li>myuser - Gives your User ID.", "States your current occupied User ID.</li>
+        <li>fuck - Fuck someone.", "Fuck someone in all of their holes today!</li>
+        <li>help - basicly this bitch.</li>
       </ul>
     </aside>
   </main>
